--- a/src/pages/project/project.scss
+++ b/src/pages/project/project.scss
@@ -21,4 +21,43 @@
     .center {
         text-align: center;
     }
+
+    h1 {
+        margin-top: 0;
+        font-size: 2.1rem;
+        font-weight: 400;
+        margin-bottom: 2.7rem;
+    }
+
+    .technical {
+        font-family: 'Work Sans', sans-serif;
+        font-style: normal;
+        line-height: 1.6em;
+        letter-spacing: .25em;
+        text-transform: uppercase;
+        color: #333;
+        font-size: 12px;
+        font-weight: bold;
+    }
+
+    .visit {
+        margin-bottom: 0;
+        margin-top: 1.5rem;
+    }
+
+    p, a {
+        font-family: 'Lora', serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 14px;
+        line-height: 1.8em;
+        letter-spacing: .02em;
+        text-rendering: optimizeLegibility;
+        color: #333;
+    }
+
+    a {
+        text-decoration: none;
+        letter-spacing: 0.04em;
+    }
 }
