--- a/src/components/project-item/project.scss
+++ b/src/components/project-item/project.scss
@@ -12,7 +12,7 @@
         height: 100%;
         width: 100%;
         opacity: 0;
-        background: rgba(255, 255, 255, 0.7);
+        background: #1d2124ed;
         transition: all .2s ease-in-out;
 
         h1 {
@@ -20,7 +20,7 @@
             padding-right: 2rem;
             font-weight: 400;
             text-align: center;
-            color: black;
+            color: #dddee2;
         }
     }
 
