added active navlink class to nav links resume page complete

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -39,5 +39,9 @@
             padding-left: 30px;
             padding-right: 30px;
         }
+
+        .active {
+            color: #333;
+        }
     }
 }
