--- a/src/pages/about/aboutpage.scss
+++ b/src/pages/about/aboutpage.scss
@@ -27,7 +27,7 @@
         letter-spacing: .25em;
         text-transform: uppercase;
         color: #333;
-        font-size: 12px;
+        font-size: .65rem;
     }
 
     h1 {
