--- a/src/pages/about/aboutpage.scss
+++ b/src/pages/about/aboutpage.scss
@@ -59,10 +59,20 @@
     i {
         fill: #222;
         font-size: 1.4rem;
+    }
 
-        &:nth-child(even) {
-            margin-left: .85rem;
-            margin-right: .85rem;
+    .icon-container {
+        a {
+            padding-left: 0;
+
+            &:nth-child(even) {
+                margin-left: .85rem;
+                margin-right: .85rem;
+            }
+
+            &:last-child {
+                margin-right: 0;
+            }
         }
     }
 }
