--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,7 @@
+$large: 1024px;
+$med: 768px;
+$small: 554px;
+
 .header {
     margin: 3vw auto;
     padding-left: 1.5vw;
@@ -5,6 +9,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media screen and (max-width: $med) {
+        padding-left: 3.2vw;
+        padding-right: 3.5vw;
+    }
 
     .logo-container {
 
@@ -29,6 +38,10 @@
             line-height: 1em;
             transition: color .2s;
             font-weight: bold;
+
+            @media screen and (max-width: $med) {
+                display: none;
+            }
         }
 
         :hover {
@@ -38,10 +51,75 @@
         :nth-child(even) {
             padding-left: 30px;
             padding-right: 30px;
+
+            @media screen and (max-width: $med) {
+                padding-right: 0;
+            }
         }
 
         .active {
             color: #333;
+        }
+
+        .open-btn {
+            font-size: 1.5rem;
+            color: #333;
+            display: none;
+
+            @media screen and (max-width: $med) {
+                display: block;
+            }
+        }
+    }
+
+    .sidenav {
+        opacity: 0;
+        background: white;
+        color: #333;
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: -1;
+        transition: all .3s ease-in-out;
+
+        .link {
+            font-family: 'Work Sans', sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 36px;
+            letter-spacing: 0em;
+            line-height: 1.6em;
+            text-transform: none;
+            text-decoration: none;
+            outline: none;
+            color: #333
+        }
+
+        .active {
+            color: #b0a997;
+        }
+    }
+
+    .sidenav-open {
+        z-index: 1;
+        opacity: 1;
+    }
+
+    .close-btn {
+        position: absolute;
+        top: 2.8rem;
+        right: 1.5rem;
+        font-size: 1.7rem;
+
+        @media screen and (max-width: $small) {
+            top: 2rem;
+            right: 1rem;
         }
     }
 }
