--- a/src/pages/about/aboutpage.scss
+++ b/src/pages/about/aboutpage.scss
@@ -1,9 +1,28 @@
+$large: 1024px;
+$med: 768px;
+$small: 554px;
+
 .about {
     padding: 0 14vw 1.5vw;
     display: flex;
 
+    @media screen and (max-width: $med) {
+        padding: 2rem 12vw 1.5vw;
+    }
+
+    @media screen and (max-width: $small) {
+        flex-direction: column;
+        padding-left: 3.2vw;
+        padding-right: 3.2vw;
+        padding-bottom: 3rem;
+    }
+
     .image-container {
         width: 30%;
+
+        @media screen and (max-width: $small) {
+            width: 100%;
+        }
     }
 
     img {
@@ -14,6 +33,16 @@
     .about-container {
         padding-left: 8vw;
         width: 70%;
+
+        span {
+            font-weight: 500;
+        }
+
+        @media screen and (max-width: $small) {
+            width: 100%;
+            padding-left: 0;
+            padding-top: 2.5rem;
+        }
     }
 
     .location {
@@ -28,12 +57,20 @@
         text-transform: uppercase;
         color: #333;
         font-size: .65rem;
+
+        @media screen and (max-width: $med) {
+            font-size: .75rem;
+        }
     }
 
     h1 {
         margin-top: 1.5rem;
         font-size: 2.60416667vw;
         font-weight: 400;
+
+        @media screen and (max-width: $med) {
+            font-size: 30px;
+        }
     }
 
     p {
@@ -73,6 +110,10 @@
             &:last-child {
                 margin-right: 0;
             }
+        }
+
+        @media screen and (max-width: $small) {
+            padding-top: 5px;
         }
     }
 }
