--- a/src/pages/project/project.scss
+++ b/src/pages/project/project.scss
@@ -1,12 +1,24 @@
+$large: 1024px;
+$med: 768px;
+$small: 554px;
+
 .project {
     padding: 0 1.5vw 1.5vw;
     display: flex;
     flex-direction: column;
 
+    @media screen and (max-width: $small) {
+        padding: 2rem 3.2vw 3rem;
+    }
+
     .column-50-text {
         width: 50%;
         margin: 0 auto;
         padding-bottom: 50px;
+
+        @media screen and (max-width: $small) {
+            width: 100%;
+        }
     }
 
     img {
@@ -27,6 +39,10 @@
         font-size: 2.1rem;
         font-weight: 400;
         margin-bottom: 2.7rem;
+
+        @media screen and (max-width: $small) {
+            margin-bottom: 1.7rem;
+        }
     }
 
     .technical {
