--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -86,19 +86,21 @@ $small: 554px;
         align-items: center;
         flex-direction: column;
         z-index: -1;
-        transition: all .3s ease-in-out;
+        transition: all .05s ease-in;
 
         .link {
             font-family: 'Work Sans', sans-serif;
             font-weight: 400;
             font-style: normal;
-            font-size: 36px;
+            font-size: 26px;
             letter-spacing: 0em;
             line-height: 1.6em;
             text-transform: none;
             text-decoration: none;
             outline: none;
-            color: #333
+            color: #333;
+            position: relative;
+            bottom: 4rem;
         }
 
         .active {
