--- a/src/components/blog-single-info/blog-single-info.scss
+++ b/src/components/blog-single-info/blog-single-info.scss
@@ -19,5 +19,94 @@ $small: 554px;
         left: 0;
         width: 100%;
         z-index: -1;
+        background: white;
+
+        &:after {
+            display: block;
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgb(255,255,255);
+            background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,0.8281687675070029) 20%, rgba(255,255,255,0) 100%);
+        }
+
+        .hero-img-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+
+            img {
+                object-fit: cover;
+                object-position: center;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .hero-header-container {
+            position: relative;
+            bottom: 12rem;
+            z-index: 1;
+            width: 60%;
+            margin: auto;
+
+            // position: absolute;
+            // z-index: 1;
+            // width: 60%;
+            // margin: auto;
+            // transform: translate(33%, -27%);
+
+            .hero-header-container-inner {
+                width: 80%;
+
+                h1 {
+                    font-family: 'Cinzel', serif;
+                    margin-top: 0;
+                    font-size: 4rem;
+                    line-height: 4rem;
+                    margin-bottom: 0;
+                    letter-spacing: 0;
+            
+                    @media screen and (max-width: $small) {
+                        
+                    }
+            
+                    @media screen and (min-width: $xlarge) {
+                        
+                    }
+                }
+
+                h3 {
+                    font-family: 'Work Sans', sans-serif;
+                    font-style: normal;
+                    line-height: 1.6em;
+                    letter-spacing: .25em;
+                    text-transform: uppercase;
+                    color: #333;
+                    font-size: .65rem;
+                    font-weight: 400;
+                }
+            }
+
+            p {
+                font-family: 'Lora', serif;
+                font-weight: 400;
+                font-style: normal;
+                font-size: 16px;
+                line-height: 1.8em;
+                letter-spacing: .02em;
+                text-rendering: optimizeLegibility;
+                color: #333;
+                margin-top: 3em;
+                margin-bottom: 3em;
+            }
+
+            .image {
+                width: 100%;
+            }
+        }
     }
 }
