--- a/src/pages/blog/blogpage.scss
+++ b/src/pages/blog/blogpage.scss
@@ -63,6 +63,7 @@ $small: 554px;
         width: 50%;
         margin: 0 auto;
         padding-bottom: 50px;
+        text-align: center;
 
         @media screen and (max-width: $small) {
             width: 100%;
