--- a/src/pages/project/project.scss
+++ b/src/pages/project/project.scss
@@ -23,8 +23,12 @@ $small: 554px;
     }
 
     img {
-        padding: 1px 1.5vw;
+        padding: 1px 11.5vw;
         width: 100%;
+
+        @media screen and (max-width: $med) {
+            padding: 1px 1.5vw;
+        }
     }
 
     .top-bottom-padding {
