--- a/src/pages/resume/resumepage.scss
+++ b/src/pages/resume/resumepage.scss
@@ -13,6 +13,10 @@ $small: 554px;
 
     .full-img, .mobile-img {
         width: 100%;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 
     .mobile-img {
