Created new fully responsive home page with correct routing Single blog pages are now dark theme Share buttons on single blog pages open correctly

--- a/src/components/blog-card-home/blog-card-home.scss
+++ b/src/components/blog-card-home/blog-card-home.scss
@@ -3,7 +3,7 @@ $large: 1024px;
 $med: 768px;
 $small: 554px;
 
-.blog-card {
+.blog-card-home {
     display: flex;
     margin-bottom: 1.5rem;
 
@@ -56,7 +56,6 @@ $small: 554px;
 
         .title {
             align-self: flex-start;
-            font-family: 'Cinzel', serif;
 
             @media screen and (min-width: $xlarge) {
                 font-size: 40px;
