--- a/src/pages/blog/blogpage.scss
+++ b/src/pages/blog/blogpage.scss
@@ -12,6 +12,10 @@ $small: 554px;
         padding: 2rem 3.2vw 3rem;
     }
 
+    .blog-posts-container {
+        position: relative;
+    }
+
     .text-container {
         padding-top: 25px;
 
