--- a/src/components/blog-single-info/blog-single-info.scss
+++ b/src/components/blog-single-info/blog-single-info.scss
@@ -20,7 +20,11 @@ $small: 554px;
         left: 0;
         width: 100%;
         z-index: -2;
-        background: white;
+        background: black;
+
+        @media screen and (max-width: $small) {
+            height: 60vh;
+        }
 
         &:after {
             display: block;
@@ -30,8 +34,8 @@ $small: 554px;
             left: 0;
             right: 0;
             bottom: 0;
-            background: white;
-            background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0.828) 15%, rgba(255,255,255,0) 100%);
+            background: black;
+            background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0.828) 15%, rgba(255,255,255,0) 100%);
         }
 
         .hero-img-container {
@@ -53,6 +57,11 @@ $small: 554px;
             left: 0;
             height: 70vh;
             width: 100%;
+
+            @media screen and (max-width: $small) {
+                height: 60vh;
+            }
+    
 
             .overlay-inner {
                 height: 100%;
@@ -84,7 +93,7 @@ $small: 554px;
                         line-height: 4rem;
                         margin-bottom: 0;
                         letter-spacing: 0;
-                        color: #333;
+                        color: white;
 
                         @media screen and (max-height: $small) {
                             font-size: 2rem;
@@ -103,7 +112,7 @@ $small: 554px;
                         line-height: 1.6em;
                         letter-spacing: .25em;
                         text-transform: uppercase;
-                        color: #333;
+                        color: white;
                         font-size: .65rem;
                         font-weight: 400;
                         margin-bottom: 0;
@@ -145,7 +154,7 @@ $small: 554px;
 
             @media screen and (max-width: $large) {
                 width: 100%;
-                padding: 0 3.2vw 1.5vw;
+                padding: 0 3.2vw 3.2vw;
             }
 
             img {
@@ -157,7 +166,28 @@ $small: 554px;
                 position: relative;
                 top: .9em;
                 font-size: 2rem;
+                display: inline-block;
                 margin-top: 0;
+                margin-bottom: 0;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                position: relative;
+                background-color: #e0393f;
+                // pink bg
+                // background-image: linear-gradient(70deg, #e400ff 35%, #828c7f 70%, #c4c8c7 100%);
+                // traditional bg
+                // background-image: linear-gradient(70deg, #753db4 30%, #be1555 60%, #d90d22 100%);
+                // background-image: linear-gradient(
+                //         45deg,
+                //         #CA4246 16.666%, 
+                //         #E16541 16.666%, 
+                //         #c25638 33.333%, 
+                //         #8B9862 50%, 
+                //         #51648f 66.666%, 
+                //         #A7489B 83.333%);
+                // background-image: linear-gradient(70deg,#083df9 20%,#ac7f54 60%,#ee06f2);
+                background-size: 100%;
+                background-repeat: repeat;
             }
 
             blockquote {
@@ -192,7 +222,6 @@ $small: 554px;
                 p {
                     -webkit-background-clip: text;
                     -webkit-text-fill-color: transparent;
-                    color: #4354aa;
                     position: relative;
                     text-transform: uppercase;
                     font-family: 'Cinzel', serif;
@@ -201,14 +230,19 @@ $small: 554px;
                     margin: 0 !important;
                     margin-right: 50px !important;
                     background-color: #CA4246;
-                    background-image: linear-gradient(
-                            45deg,
-                            #CA4246 16.666%, 
-                            #E16541 16.666%, 
-                            #c25638 33.333%, 
-                            #8B9862 50%, 
-                            #51648f 66.666%, 
-                            #A7489B 83.333%);
+                    // pink bg
+                    // background-image: linear-gradient(70deg, #e400ff 35%, #828c7f 70%, #c4c8c7 100%);
+                    // traditional bg
+                    // background-image: linear-gradient(70deg, #753db4 30%, #be1555 60%, #d90d22 100%);
+                    // background-image: linear-gradient(
+                    //         45deg,
+                    //         #CA4246 16.666%, 
+                    //         #E16541 16.666%, 
+                    //         #c25638 33.333%, 
+                    //         #8B9862 50%, 
+                    //         #51648f 66.666%, 
+                    //         #A7489B 83.333%);
+                    background-image: linear-gradient(70deg,#083df9 20%,#ac7f54 60%,#ee06f2);
                     background-size: 100%;
                     background-repeat: repeat;
 
@@ -238,6 +272,7 @@ $small: 554px;
                     line-height: 4rem;
                     margin-bottom: 0;
                     letter-spacing: 0;
+                    color: white;
                 }
 
                 h3 {
@@ -246,33 +281,38 @@ $small: 554px;
                     line-height: 1.6em;
                     letter-spacing: .25em;
                     text-transform: uppercase;
-                    color: #333;
+                    color: white;
                     font-size: .65rem;
                     font-weight: 400;
                 }
             }
 
             p {
-                font-family: 'Lora', serif;
+                font-family: 'Roboto', sans-serif;
                 font-weight: 500;
                 font-style: normal;
-                font-size: 16px;
-                line-height: 1.8em;
-                letter-spacing: .025em;
+                font-size: 18px;
+                line-height: 1.7em;
+                letter-spacing: .03em;
                 text-rendering: optimizeLegibility;
-                color: #333;
+                color: white;
                 margin-top: 2em;
 
                 &:first-child {
                     margin-top: 2em;
                 }
+
+                @media screen and (max-width: $small) {
+                    font-size: 16px;
+                }
             }
 
             a {
                 text-decoration: none;
-                color: #333;
+                color: white;
                 position: relative;
                 padding-bottom: 2px;
+                font-weight: 500;
 
                 &:before {
                     content: '';
@@ -280,34 +320,35 @@ $small: 554px;
                     bottom: 0;
                     width: 100%;
                     height: 3px;
-                    background-color: #CA4246;
-                    background-image: linear-gradient(
-                            45deg,
-                            #CA4246 16.666%, 
-                            #E16541 16.666%, 
-                            #c25638 33.333%, 
-                            #8B9862 50%, 
-                            #51648f 66.666%, 
-                            #A7489B 83.333%);
+                    background-color: #1c19ca;
+                    // background-image: linear-gradient(
+                    //         45deg,
+                    //         #CA4246 16.666%, 
+                    //         #E16541 16.666%, 
+                    //         #c25638 33.333%, 
+                    //         #8B9862 50%, 
+                    //         #51648f 66.666%, 
+                    //         #A7489B 83.333%);
+                    // background-image: linear-gradient(70deg,#083df9 20%,#ac7f54 60%,#ee06f2);
                     background-size: 100%;
                     background-repeat: repeat;
-                    transition: all .8s ease-out;
-                }
-
-                &:hover::before {
-                    background-image: linear-gradient(
-                            45deg,
-                            #b34d51 16.666%, 
-                            #af563e 16.666%, 
-                            #993b21 33.333%, 
-                            #687930 50%, 
-                            #2d3955 66.666%, 
-                            #632a5b 83.333%);
                 }
             }
 
             .image {
                 width: 100%;
+            }
+
+            footer {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-top: 3rem;
+
+                a {
+                    font-family: 'Work Sans', sans-serif;
+                    text-transform: uppercase;
+                }
             }
 
             .share-footer {
@@ -320,9 +361,10 @@ $small: 554px;
                     font-style: normal;
                     letter-spacing: .15em;
                     text-transform: uppercase;
-                    color: #333;
+                    color: white;
                     font-size: 12px;
                     font-weight: bold;
+                    display: none;
                 }
             }
         }
